--- a/src/acoustic_alarm_engine/tuner/index.html
+++ b/src/acoustic_alarm_engine/tuner/index.html
@@ -3,21 +3,29 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Record, analyze, and generate alarm patterns with the Alarm Audio Tuner. A powerful tool for acoustic alarm configuration." />
+    <meta
+      name="description"
+      content="Record, analyze, and generate alarm patterns with the Alarm Audio Tuner. A powerful tool for acoustic alarm configuration."
+    />
     <title>Alarm Audio Tuner</title>
-    
+
     <!-- Fonts: Inter for UI, JetBrains Mono for code -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet" />
-    
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap"
+      rel="stylesheet"
+    />
+
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <div class="app-container">
       <header class="app-header">
         <h1><span class="icon">🎵</span> Alarm Audio Tuner</h1>
-        <p class="subtitle">Record, analyze, and generate alarm sound patterns with precision</p>
+        <p class="subtitle">
+          Record, analyze, and generate alarm sound patterns with precision
+        </p>
       </header>
 
       <main class="main-content">
@@ -40,15 +48,104 @@
             </button>
           </div>
 
-          <div class="visualization-container">
-            <h3>Waveform</h3>
-            <canvas id="waveformCanvas" width="600" height="100"></canvas>
+          <!-- Upload/Download Row -->
+          <div class="controls-row controls-row-secondary">
+            <label class="btn btn-upload">
+              <span class="icon">📁</span> Upload Audio
+              <input type="file" id="uploadInput" accept="audio/*" hidden />
+            </label>
+            <button id="downloadBtn" class="btn btn-download" disabled>
+              <span class="icon">💾</span> Download Recording
+            </button>
+          </div>
 
-            <h3>Spectrogram (Live)</h3>
-            <canvas id="spectrogramCanvas" width="600" height="150"></canvas>
+          <div class="visualization-container">
+            <h3>Audiogram <span class="analysis-hint">(click and drag to select region for cropping)</span></h3>
+            <canvas id="audiogramCanvas" width="600" height="80"></canvas>
+            <div class="crop-controls" id="cropControls" style="display: none;">
+              <span id="cropRange">Selected: 0.0s - 0.0s</span>
+              <button id="cropBtn" class="btn btn-crop">✂️ Crop to Selection</button>
+              <button id="clearCropBtn" class="btn btn-clear-crop">✕ Clear</button>
+            </div>
+
+            <h3>
+              Frequency Timeline
+              <span class="analysis-hint">(hover for exact values)</span>
+            </h3>
+            <div class="zoom-controls">
+              <button id="zoomInBtn" class="btn btn-zoom" title="Zoom In">🔍+</button>
+              <button id="zoomOutBtn" class="btn btn-zoom" title="Zoom Out">🔍−</button>
+              <button id="zoomResetBtn" class="btn btn-zoom" title="Reset Zoom">↺</button>
+              <span id="zoomLevel" class="zoom-level">100%</span>
+            </div>
+            <div class="frequency-timeline-wrapper" id="frequencyTimelineWrapper">
+              <canvas id="frequencyTimelineCanvas" width="600" height="160"></canvas>
+              <div id="freqTooltip" class="freq-tooltip" style="display: none;"></div>
+            </div>
 
             <h3>Detected Events</h3>
             <canvas id="eventsCanvas" width="600" height="100"></canvas>
+          </div>
+
+          <!-- Frequency Query Section -->
+          <div class="frequency-query-section">
+            <h3>Frequency Query</h3>
+            <div class="query-controls">
+              <label>
+                Target Frequency (Hz)
+                <input
+                  type="number"
+                  id="queryFrequency"
+                  value="3000"
+                  min="20"
+                  max="20000"
+                  step="10"
+                />
+              </label>
+              <label>
+                Tolerance (±Hz)
+                <input
+                  type="number"
+                  id="queryTolerance"
+                  value="100"
+                  min="10"
+                  max="500"
+                  step="10"
+                />
+              </label>
+              <button id="queryBtn" class="btn btn-query" disabled>
+                <span class="icon">🔍</span> Query
+              </button>
+            </div>
+            <div id="queryResults" class="query-results">
+              <span class="placeholder"
+                >Record audio and click Query to analyze frequency
+                presence</span
+              >
+            </div>
+          </div>
+
+          <!-- Analysis Settings Section -->
+          <div class="analysis-settings-section">
+            <h3>Analysis Settings</h3>
+            <div class="settings-row">
+              <label>
+                Resolution
+                <select id="resolutionSelect">
+                  <option value="4096">Low (~93ms) - Better for noisy environments</option>
+                  <option value="2048" selected>Standard (~46ms) - Recommended</option>
+                  <option value="1024">High (~23ms) - For fast patterns</option>
+                  <option value="512">Ultra (~12ms) - Maximum detail</option>
+                </select>
+              </label>
+              <button id="reanalyzeBtn" class="btn btn-reanalyze" disabled>
+                🔄 Re-analyze
+              </button>
+            </div>
+            <p class="settings-hint">
+              Higher resolution detects shorter sounds but may be more sensitive to noise.
+              After changing, click Re-analyze to update the visualizations.
+            </p>
           </div>
 
           <div class="status-bar">
@@ -64,7 +161,12 @@
           <div class="profile-form">
             <label>
               Profile Name
-              <input type="text" id="profileName" value="NewAlarm" placeholder="Enter profile name..." />
+              <input
+                type="text"
+                id="profileName"
+                value="NewAlarm"
+                placeholder="Enter profile name..."
+              />
             </label>
 
             <label>
@@ -95,12 +197,14 @@
           </div>
 
           <h3>Extracted Config (YAML)</h3>
-          <pre id="configOutput" class="config-output"># Define segments above to generate config</pre>
+          <pre id="configOutput" class="config-output">
+# Define segments above to generate config</pre
+          >
         </section>
       </main>
 
       <footer class="app-footer">
-        <p>Universal Alarm Engine Tuner v1.0 — Crafted with care</p>
+        <p>Universal Alarm Engine Tuner v1.1 — Crafted with care</p>
       </footer>
     </div>
 
