--- a/src/acoustic_alarm_engine/tuner/index.html
+++ b/src/acoustic_alarm_engine/tuner/index.html
@@ -20,6 +20,120 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <!-- Auto-Tune Questionnaire Modal -->
+    <div id="questionnaireModal" class="modal-overlay" style="display: none;">
+      <div class="modal-content questionnaire-modal">
+        <div class="modal-header">
+          <h2>🎯 Auto-Tune Setup</h2>
+          <p class="modal-subtitle">Answer a few questions to improve detection accuracy</p>
+        </div>
+        
+        <div class="questionnaire-body">
+          <div class="question-group">
+            <label class="question-label">Is this a repeating pattern?</label>
+            <p class="question-hint">Most alarms repeat the same sequence multiple times</p>
+            <div class="radio-group">
+              <label class="radio-option">
+                <input type="radio" name="isRepeating" value="yes" checked />
+                <span class="radio-custom"></span>
+                Yes, it repeats
+              </label>
+              <label class="radio-option">
+                <input type="radio" name="isRepeating" value="no" />
+                <span class="radio-custom"></span>
+                No, single occurrence
+              </label>
+              <label class="radio-option">
+                <input type="radio" name="isRepeating" value="unsure" />
+                <span class="radio-custom"></span>
+                Not sure
+              </label>
+            </div>
+          </div>
+
+          <div class="question-group">
+            <label class="question-label">Are all beeps the same pitch?</label>
+            <p class="question-hint">Some alarms have varying frequencies</p>
+            <div class="radio-group">
+              <label class="radio-option">
+                <input type="radio" name="samePitch" value="same" checked />
+                <span class="radio-custom"></span>
+                Same pitch
+              </label>
+              <label class="radio-option">
+                <input type="radio" name="samePitch" value="different" />
+                <span class="radio-custom"></span>
+                Different pitches
+              </label>
+              <label class="radio-option">
+                <input type="radio" name="samePitch" value="unsure" />
+                <span class="radio-custom"></span>
+                Not sure
+              </label>
+            </div>
+          </div>
+
+          <div class="question-group" id="pitchDetailsGroup" style="display: none;">
+            <label class="question-label">Which beeps have different pitches?</label>
+            <p class="question-hint">Describe the pitch variation pattern</p>
+            <select id="pitchPattern">
+              <option value="alternating">Alternating high/low</option>
+              <option value="ascending">Ascending (low to high)</option>
+              <option value="descending">Descending (high to low)</option>
+              <option value="random">Irregular/random</option>
+            </select>
+          </div>
+
+          <div class="question-group">
+            <label class="question-label">How many beeps per cycle?</label>
+            <p class="question-hint">Count the beeps before a long pause (e.g., T3 = 3, T4 = 4)</p>
+            <div class="beep-count-row">
+              <input type="number" id="beepCount" min="1" max="10" value="" placeholder="e.g., 3" />
+              <label class="checkbox-inline">
+                <input type="checkbox" id="beepCountUnsure" />
+                Not sure
+              </label>
+            </div>
+          </div>
+
+          <div class="question-group">
+            <label class="question-label">Is there a long pause between cycles?</label>
+            <p class="question-hint">A noticeable gap before the pattern repeats</p>
+            <div class="radio-group">
+              <label class="radio-option">
+                <input type="radio" name="hasLongPause" value="yes" checked />
+                <span class="radio-custom"></span>
+                Yes
+              </label>
+              <label class="radio-option">
+                <input type="radio" name="hasLongPause" value="no" />
+                <span class="radio-custom"></span>
+                No
+              </label>
+              <label class="radio-option">
+                <input type="radio" name="hasLongPause" value="unsure" />
+                <span class="radio-custom"></span>
+                Not sure
+              </label>
+            </div>
+          </div>
+        </div>
+
+        <div class="modal-footer">
+          <button id="skipQuestionnaireBtn" class="btn btn-secondary">Skip & Auto-Detect</button>
+          <button id="startAnalysisBtn" class="btn btn-primary">🔍 Start Analysis</button>
+        </div>
+      </div>
+    </div>
+
+    <!-- A/B Comparison Indicator -->
+    <div id="abCompareIndicator" class="ab-compare-indicator" style="display: none;">
+      <div class="ab-label" id="abLabel">Playing: Original</div>
+      <div class="ab-progress">
+        <div class="ab-progress-bar" id="abProgressBar"></div>
+      </div>
+    </div>
+
     <div class="app-container">
       <header class="app-header">
         <h1><span class="icon">🎵</span> Alarm Audio Tuner</h1>
@@ -85,6 +199,30 @@
 
             <h3>Detected Events</h3>
             <canvas id="eventsCanvas" width="600" height="100"></canvas>
+            
+            <!-- A/B Comparison Controls -->
+            <div class="ab-compare-section" id="abCompareSection" style="display: none;">
+              <h3>Preview & Compare</h3>
+              <div class="ab-controls-row">
+                <button id="previewDetectedBtn" class="btn btn-preview" disabled>
+                  <span class="icon">▶</span> Preview Detected
+                </button>
+                <button id="abCompareBtn" class="btn btn-compare" disabled>
+                  <span class="icon">⚡</span> A/B Compare
+                </button>
+              </div>
+              <div class="ab-timeline" id="abTimeline">
+                <div class="ab-track ab-track-original">
+                  <span class="ab-track-label">Original</span>
+                  <div class="ab-track-bar" id="originalTrackBar"></div>
+                </div>
+                <div class="ab-track ab-track-detected">
+                  <span class="ab-track-label">Detected</span>
+                  <div class="ab-track-bar" id="detectedTrackBar"></div>
+                </div>
+              </div>
+              <p class="ab-hint">Compare the original recording with the detected pattern to verify accuracy</p>
+            </div>
           </div>
 
           <!-- Frequency Query Section -->
